# canonforge-omega

canonforge-omega/: LICENSE  README.md  pyproject.toml
canonforge-omega/api/: app.py
canonforge-omega/desktop_ui/electron/: README.md  main.js  package.json
canonforge-omega/examples/: omega144_example.py
canonforge-omega/omega_144d_core/: __init__.py  core_bus.py  dss_engine.py  event_queue.py  rc144_core.py  subverse_core.py
canonforge-omega/omega_fusion_core/: __init__.py
canonforge-omega/omega_fusion_core/core/: model.py  tic.py  universal_moment.py
canonforge-omega/omega_fusion_core/host/: executor.py  muscles.py
canonforge-omega/omega_fusion_core/pattern_hub/: macro_playback.py
canonforge-omega/omega_fusion_core/storage/: sequence_store.py
docs/: index.html
